force-app/main/default/objects/Email_Service_Message__c/Email_Service_Message__c.object-meta.xml
<CustomObject>
    <label>Email Service Message</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Service Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>