force-app/main/default/objects/Email_Service_Message__c/fields/Email_Service__c.field-meta.xml
<CustomField>
    <fullName>Email_Service__c</fullName>
    <formula>IF(CONTAINS(Recipients__c,&apos;gecko&apos;),&apos;Gecko&apos;,
IF(CONTAINS(Recipients__c,&apos;courtserve&apos;),&apos;CourtServe&apos;,&apos;&apos;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Service</label>
    <type>Text</type>
</CustomField>