force-app/main/default/objects/Email_Service_Message__c/fields/Recipients__c.field-meta.xml
<CustomField>
    <fullName>Recipients__c</fullName>
    <label>Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>