force-app/main/default/objects/Email_Service_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email_Service__c</columns>
    <columns>Sender__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>